<resources>
    <string name="app_name">하고심다</string>
    <string name="bottom_nav_garden">정원방문</string>
    <string name="bottom_nav_water">물주기</string>
    <string name="btn_okay">확인</string>
    <string name="btn_start">하고, 심으러 가기</string>
    <string name="btn_first_garden">첫 정원 만들기</string>
    <string name="btn_re_login">다시 로그인하기</string>
    <string name="wrong_pw_tempo">임시 비밀번호가 일치하지 않습니다.</string>
    <string name="wrong_pw">비밀번호가 일치하지 않습니다.</string>
    <string name="wrong_pw_form">대소문자 구분 없이 숫자를 포함하여 10자 이상으로 작성해주세요.</string>
    <string name="wrong_email">존재하지 않거나 잘못된 이메일입니다.</string>
    <string name="wrong_nickname">닉네임은 5글자 이내로 작성해주세요.</string>
    <string name="wrong_phone">잘못된 전화번호 형식입니다.</string>
    <string name="login_account">계정이 없으신가요? 회원가입</string>
    <string name="bottom_nav_book">전체도감</string>
    <string name="logo_small">이제는 하고 싶을 때,</string>
    <string name="logo_big">하고,심다</string>
    <string name="garden_delete">정원 삭제</string>
    <string name="garden_delete_explain">을(를) 삭제하시겠습니까? </string>
    <string name="goal_delete">목표 삭제</string>
    <string name="garden_my">나의 정원</string>
    <string name="garden_pot">화분 심기</string>
    <string name="garden_add">정원 만들기</string>
    <string name="water_change_calendar">월/주</string>
    <string name="water_week_add_goal">목표 추가</string>
    <string name="water_week_non_garden">정원을 만들어주세요</string>
    <string name="water_week_non_pot">화분을 만들어주세요</string>
    <string name="select_topic">집중하고 싶은 순간을 골라주세요!</string>
    <string name="select_topic1">공부</string>
    <string name="select_topic2">취미</string>
    <string name="select_topic3">운동</string>
    <string name="select_title">하고 싶을 준비 되었나요?</string>
    <string name="select_explanation">정원의 설명을 적어주세요!</string>
    <string name="kakao_key">38ef3a6efa9e6384d62bbc8aafadd751</string>
    <string name="kakao_scheme">kakao38ef3a6efa9e6384d62bbc8aafadd751</string>
    <string name="dialog_garden_month_time">시간 설정하기</string>
    <string name="dialog_garden_month_date">날짜 설정하기</string>
    <string name="dialog_garden_month_cancel">취소</string>
    <string name="dialog_garden_month_complete">완료</string>
    <string name="dialog_garden_month_delete">삭제</string>
    <string name="dialog_garden_month_choose">블럭 색상을 정해주세요!</string>
    <string name="dialog_garden_month_warning">태그는 최대 4개까지 설정할 수 있습니다!</string>
    <string name="profile_welcome_user">삶을 가꾸는 하니님,\n환영해요!</string>
    <string name="profile_terms_and_conditions_of_use">이용약관</string>
    <string name="profile_personal_information_processing_policy">개인정보처리방침</string>
    <string name="profile_howtouse">사용 설명서</string>
    <string name="profile_logout">로그아웃</string>
    <string name="profile_withdrawal">탈퇴하기</string>
    <string name="modify_take_pictures">사진 찍기</string>
    <string name="modify_select_gallery">갤러리에서 선택</string>
    <string name="howtouse_step_01">카테고리를 선택해주세요! (공부, 운동, 취미)</string>
    <string name="howtouse_step_02">정원 이름을 정해주세요!</string>
    <string name="howtouse_step_03">정원 속 키우고 싶은 화분을 심어주세요!</string>
    <string name="howtouse_step_04">화분을 키우기 위해 투두를 작성하고,\n투두를 완료해서 화분에 물을 주세요!</string>
    <string name="qna_question_01">정원, 화분, 투두(물주기) 설정은 어떻게\n하는 건가요?</string>
    <string name="qna_question_02">전체 도감은 어떤 기능인가요?</string>
    <string name="qna_question_03">정원의 개수가 제한적인가요?</string>
    <string name="qna_answer_01">정원은 공부/운동/취미 카테고리 중 하나를\n선택해서 자유롭게 가꿀 수 있는 엄청 큰 목\n표입니다. 그 속에서 키울 수 있는 화분은 작\n은 목표, 그리고 물을 주는 행위가 투두인데\n요!\n\n쉬운 예로는 운동이라는 카테고리를 정한다\n면, 나는야 운동왕이 정원이 되는 거고,\n10KG 감량 / 공복유산소 / 식단 관리 같은\n항목이 화분이 되는 겁니다. 해당 화분에 대\n해서도 목표랑 할일을 설정해서 물주기 캘린\n더 페이지를 꾸밀 수 있습니다. 말 그대로 할\n일을 하고, 화분을 심을 수 있는 것이죠.</string>
    <string name="qna_answer_02">다 키운 화분을 모아서 보여주는 페이지입니다.</string>
    <string name="plant_percent">0%</string>
    <string name="plant_add_goal">목표 추가</string>
    <string name="plant_garden_name">정원 이름</string>
    <string name="plant_flowerpot_name">화분의 이름</string>
    <string name="whole_create_garden">정원을 만들어 주세요</string>
    <string name="whole_no_flowerpot">아직 다 키운 화분이 없어요\nㅠ_ㅠ</string>
    <string name="whole_garden_name">정원 이름</string>
    <string name="whole_explain_garden">정원설명</string>
    <string name="whole_category_label">공부</string>
    <string name="whole_category">카테고리</string>
    <string name="whole_explain_garden_label">나는 공부왕이 될거야 두고봐라</string>
    <string name="item_flowerpot_plant_name">3-1 과탑 예정이요 ㅋ</string>
    <string name="item_flowerpot_period">2024.01.01 ~ 2024.02.01</string>
    <string name="item_book_garden_name">정원 이름</string>
    <string name="item_book_pot_name">화분 이름</string>
</resources>