<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delete_garden_custom_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/dialog_delete_garden_background_iv"
        android:layout_width="322dp"
        android:layout_height="173dp"
        android:src="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_delete_garden_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garden_delete"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dialog_delete_garden_background_iv"
        />

    <TextView
        android:id="@+id/dialog_delete_garden_explain_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garden_delete_explain"
        android:textColor="@color/wp_gray2"
        android:textSize="15dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="77dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dialog_delete_garden_background_iv"
        />

    <android.widget.Button
        android:id="@+id/dialog_delete_garden_cancel_btn"
        android:layout_width="67dp"
        android:layout_height="27dp"
        android:text="@string/dialog_garden_month_cancel"
        android:background="@drawable/rect_dialog_todo_btn"
        android:textSize="12dp"
        android:gravity="center"
        android:layout_marginStart="47dp"
        android:layout_marginTop="126dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dialog_delete_garden_background_iv"/>

    <android.widget.Button
        android:id="@+id/dialog_delete_garden_complete_btn"
        android:layout_width="67dp"
        android:layout_height="27dp"
        android:text="@string/dialog_garden_month_delete"
        android:background="@drawable/rect_dialog_todo_btn"
        android:textSize="12dp"
        android:gravity="center"
        android:layout_marginEnd="47dp"
        app:layout_constraintTop_toTopOf="@+id/dialog_delete_garden_cancel_btn"
        app:layout_constraintEnd_toEndOf="@+id/dialog_delete_garden_background_iv"/>

</androidx.constraintlayout.widget.ConstraintLayout>