<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delete_goal_custom_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:minWidth="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/rect_whitefill_bluestroke_15radius">

    <TextView
        android:id="@+id/dialog_delete_goal_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_delete"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginStart="47dp"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/dialog_delete_goal_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="목표"
        android:textColor="@color/wp_gray2"
        android:textSize="15dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="77dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dialog_delete_goal_explain_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garden_delete_explain"
        android:textColor="@color/wp_gray2"
        android:textSize="15dp"
        android:layout_marginTop="77dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_delete_goal_name_tv"/>

    <android.widget.Button
        android:id="@+id/dialog_delete_goal_cancel_btn"
        android:layout_width="67dp"
        android:layout_height="27dp"
        android:text="@string/dialog_garden_month_cancel"
        android:background="@drawable/rect_dialog_todo_btn"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginStart="47dp"
        android:layout_marginTop="126dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.widget.Button
        android:id="@+id/dialog_delete_goal_complete_btn"
        android:layout_width="67dp"
        android:layout_height="27dp"
        android:text="@string/dialog_garden_month_delete"
        android:background="@drawable/rect_dialog_todo_btn"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginEnd="47dp"
        app:layout_constraintTop_toTopOf="@+id/dialog_delete_goal_cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>