<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF">

    <ImageView
        android:id="@+id/signup_wantplant_logo_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_signup_logo"
        android:layout_marginTop="63dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_nickname_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_login_rect"
        android:layout_marginHorizontal="30dp"
        android:paddingHorizontal="25dp"
        android:hint="닉네임"
        android:inputType="text"
        android:textColor="#757373"
        android:textSize="14dp"
        android:layout_marginTop="238dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_wrong_nickname_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/wrong_nickname"
        android:textColor="@color/wp_red"
        android:textSize="11dp"
        app:layout_constraintStart_toStartOf="@+id/signup_nickname_et"
        app:layout_constraintTop_toBottomOf="@+id/signup_nickname_et"
        />

    <EditText
        android:id="@+id/signup_email_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_login_rect"
        android:layout_marginHorizontal="30dp"
        android:paddingHorizontal="25dp"
        android:hint="이메일 주소"
        android:inputType="text"
        android:textColor="#757373"
        android:textSize="14dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_nickname_et" />

    <TextView
        android:id="@+id/signup_wrong_email_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/wrong_email"
        android:textColor="@color/wp_red"
        android:textSize="11dp"
        app:layout_constraintStart_toStartOf="@+id/signup_email_et"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_et"
        />

    <EditText
        android:id="@+id/signup_phone_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_login_rect"
        android:layout_marginHorizontal="30dp"
        android:paddingHorizontal="25dp"
        android:hint="휴대폰 번호"
        android:inputType="text"
        android:textColor="#757373"
        android:textSize="14dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_email_et" />

    <TextView
        android:id="@+id/signup_wrong_phone_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/wrong_phone"
        android:textColor="@color/wp_red"
        android:textSize="11dp"
        app:layout_constraintStart_toStartOf="@+id/signup_phone_et"
        app:layout_constraintTop_toBottomOf="@+id/signup_phone_et"
        />

    <EditText
        android:id="@+id/signup_password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_login_rect"
        android:layout_marginHorizontal="30dp"
        android:paddingHorizontal="25dp"
        android:hint="비밀번호"
        android:inputType="text"
        android:textColor="#757373"
        android:textSize="14dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_phone_et"/>

    <TextView
        android:id="@+id/signup_wrong_pw_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/wrong_pw_form"
        android:textColor="@color/wp_red"
        android:textSize="11dp"
        app:layout_constraintStart_toStartOf="@+id/signup_password_et"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_et"
        />

    <EditText
        android:id="@+id/signup_confirm_password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_login_rect"
        android:layout_marginHorizontal="30dp"
        android:paddingHorizontal="25dp"
        android:hint="비밀번호 확인"
        android:inputType="text"
        android:textColor="#757373"
        android:textSize="14dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_password_et"/>

    <TextView
        android:id="@+id/signup_wrong_confirm_pw_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/wrong_pw"
        android:textColor="@color/wp_red"
        android:textSize="11dp"
        app:layout_constraintStart_toStartOf="@+id/signup_confirm_password_et"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password_et"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/findpw_start_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_login_background"
        android:layout_marginTop="650dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/btn_first_garden"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>