<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/profile_welcome_user_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="9sp"
        android:text="@string/profile_welcome_user"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profile_image_iv"
        app:layout_constraintStart_toStartOf="@+id/profile_image_iv"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_iv" />

    <ImageView
        android:id="@+id/profile_image_iv"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="83dp"
        android:src="@drawable/img_profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_more_information_cv"
        android:layout_width="308dp"
        android:layout_height="126dp"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_welcome_user_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/wp_main_btn" >

        <LinearLayout
            android:id="@+id/profile_more_information_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_terms_and_conditions_of_use_cl"
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/profile_terms_and_conditions_of_use_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/profile_terms_and_conditions_of_use"
                    android:paddingLeft="18dp"
                    android:gravity="center_vertical" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_height="1dp"
                android:background="@color/white" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_personal_information_processing_policy_cl"
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/profile_personal_information_processing_policy_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="18dp"
                    android:text="@string/profile_personal_information_processing_policy"
                    android:gravity="center_vertical"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_height="1dp"
                android:background="@color/white" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_howtouse_cl"
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/profile_howtouse_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="18dp"
                    android:text="@string/profile_howtouse"
                    android:gravity="center_vertical" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_logout_and_withdrawal_cv"
        android:layout_width="308dp"
        android:layout_height="84dp"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_more_information_cv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/wp_main_btn">

        <LinearLayout
            android:id="@+id/profile_logout_and_withdrawal_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_logout_cl"
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/profile_logout_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="18dp"
                    android:text="@string/profile_logout"
                    android:gravity="center_vertical" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_height="1dp"
                android:background="@color/white" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_withdrawal_cl"
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:id="@+id/profile_withdrawal_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="18dp"
                    android:text="@string/profile_withdrawal"
                    android:gravity="center_vertical" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>